--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "async trip",
   "main": "index.js",
   "scripts": {
-    "callback": "node src/callback/index.js"
+    "callback": "node src/callback/index.js",
+    "callback:challenge": "node src/callback/challenge.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/johanv26/async-js/issues"
   },
-  "homepage": "https://github.com/johanv26/async-js#readme"
+  "homepage": "https://github.com/johanv26/async-js#readme",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
